# afl-models

./: LICENSE  MLP_Brownlow.ipynb  README.md  brownlow.py  pyproject.toml
data/afl_table_data/: AFL-Player-Tables_game_stats_1965.parquet  AFL-Player-Tables_game_stats_1966.parquet  AFL-Player-Tables_game_stats_1967.parquet  AFL-Player-Tables_game_stats_1968.parquet  AFL-Player-Tables_game_stats_1969.parquet  AFL-Player-Tables_game_stats_1970.parquet  AFL-Player-Tables_game_stats_1971.parquet  AFL-Player-Tables_game_stats_1972.parquet  AFL-Player-Tables_game_stats_1973.parquet  AFL-Player-Tables_game_stats_1974.parquet  AFL-Player-Tables_game_stats_1975.parquet  AFL-Player-Tables_game_stats_1976.parquet  AFL-Player-Tables_game_stats_1977.parquet  AFL-Player-Tables_game_stats_1978.parquet  AFL-Player-Tables_game_stats_1979.parquet  AFL-Player-Tables_game_stats_1980.parquet  AFL-Player-Tables_game_stats_1981.parquet  AFL-Player-Tables_game_stats_1982.parquet  AFL-Player-Tables_game_stats_1983.parquet  AFL-Player-Tables_game_stats_1984.parquet  AFL-Player-Tables_game_stats_1985.parquet  AFL-Player-Tables_game_stats_1986.parquet  AFL-Player-Tables_game_stats_1987.parquet  AFL-Player-Tables_game_stats_1988.parquet  AFL-Player-Tables_game_stats_1989.parquet  AFL-Player-Tables_game_stats_1990.parquet  AFL-Player-Tables_game_stats_1991.parquet  AFL-Player-Tables_game_stats_1992.parquet  AFL-Player-Tables_game_stats_1993.parquet  AFL-Player-Tables_game_stats_1994.parquet  AFL-Player-Tables_game_stats_1995.parquet  AFL-Player-Tables_game_stats_1996.parquet  (+194 more)
