[tool.poetry]
name = "afl-models"
version = "0.1.0"
description = ""
authors = ["Gabriel Dennis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
